_staging_docusign_asset/objects/Docusign_Template_Asset__c/Docusign_Template_Asset__c.object-meta.xml
<!-- v0.1.6 | 2026-02-17 -->
<CustomObject>
    <fullName>Docusign_Template_Asset__c</fullName>
    <label>DocuSign Template Asset</label>
    <pluralLabel>DocuSign Template Assets</pluralLabel>
    <nameField>
        <label>DocuSign Template Asset Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>