_staging_docusign_asset/objects/Docusign_Template_Asset__c/fields/Active__c.field-meta.xml
<!-- v0.1.5 | 2026-02-17 -->
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>