_staging_docusign_asset/objects/Docusign_Template_Asset__c/fields/ResumeContentDocumentId__c.field-meta.xml
<!-- v0.1.5 | 2026-02-17 -->
<CustomField>
    <fullName>ResumeContentDocumentId__c</fullName>
    <label>Resume ContentDocumentId</label>
    <type>Text</type>
    <length>18</length>
    <description>ContentDocument.Id (starts with 069...) for the resume file.</description>
</CustomField>