_staging_docusign_asset/objects/Docusign_Template_Asset__c/fields/StampedApprovalContentDocumentId__c.field-meta.xml
<!-- v0.1.5 | 2026-02-17 -->
<CustomField>
    <fullName>StampedApprovalContentDocumentId__c</fullName>
    <label>Stamped Approval ContentDocumentId</label>
    <type>Text</type>
    <length>18</length>
    <description>ContentDocument.Id (starts with 069...) for the stamped approval PDF.</description>
</CustomField>